--- a/src/styles/_awards2.scss
+++ b/src/styles/_awards2.scss
@@ -38,6 +38,7 @@
     flex-wrap: wrap;
 
     figure {
+      position: relative;
       width: calc(25% - 10px);
 
       @include media-breakpoint-down($tablet-breakpoint-dcrs) {
@@ -136,6 +137,11 @@
           border: 5px solid #03b500;
           box-sizing: border-box;
         }
+      }
+
+      .scroll-offset {
+        position: absolute;
+        top: -100px;
       }
     }
   }
