--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -1231,12 +1231,13 @@
   .value {
     font-weight: 500;
     display: block;
+    margin-bottom: 3px;
+    opacity: .5;
+    transition: opacity 0.3s ease;
 
     @include media-breakpoint-up($desktop-breakpoint) {
-      opacity: 0.5;
       font-size: 17px;
       margin-bottom: 4px;
-      transition: opacity 0.3s ease;
     }
   }
 
@@ -1463,10 +1464,19 @@
 }
 
 
-.controls-select-picture {
+.profile-buttons {
   position: absolute;
   right: 21px;
   bottom: 17px;
+  display: flex;
+  flex-direction: column;
+  align-content: flex-end;
+  align-items: flex-end;
+}
+
+.controls-select-picture {
+  position: relative;
+  margin-top: 10px;
 }
 
 .profile-user-details {
@@ -1609,4 +1619,8 @@
     padding-right: 15px;
     padding-bottom: 15px;
   }
+}
+
+.wrapper-vote-btn {
+  margin-bottom: 12px;
 }
