FIX: styles for voting popup

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -82,6 +82,7 @@
 @import "components/switcher";
 @import "components/tooltip";
 @import "components/tribute";
+@import "components/voting";
 
 @import "accordion";
 @import "components/emoji";
