--- a/src/styles/components/_popup.scss
+++ b/src/styles/components/_popup.scss
@@ -54,6 +54,7 @@
     margin: 0 20px;
     font-weight: 500;
     font-size: 17px;
+    width: calc(100% - 40px);
 
     &.m-underline-border {
       border-bottom: 1px solid rgba(124, 139, 150, 0.2);
@@ -63,6 +64,7 @@
 
   &__content {
     margin: 0 20px 20px;
+    width: calc(100% - 40px);
   }
 
   .content {
