--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -153,6 +153,21 @@
     }
   }
 
+  &.vote-btn {
+    background-color: transparent;
+    color: $primary-color;
+    height: auto;
+    display: inline-flex;
+    align-items: center;
+    align-content: center;
+
+    .icn-item {
+      margin-right: 5px;
+      color: gold;
+      filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, 0.2));
+    }
+  }
+
   &_white {
     color: $main;
 
