--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -160,11 +160,11 @@
     display: inline-flex;
     align-items: center;
     align-content: center;
+    padding: 0;
 
     .icn-item {
       margin-right: 5px;
-      color: gold;
-      filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, 0.2));
+      color: #d4af37;
     }
   }
 
