Add pay link view and filter if voting enabled

--- a/src/styles/components/_popup.scss
+++ b/src/styles/components/_popup.scss
@@ -60,6 +60,9 @@
       border-bottom: 1px solid rgba(124, 139, 150, 0.2);
       margin-bottom: 20px;
     }
+    &.smallFontSize {
+      font-size: 16px;
+    }
   }
 
   &__content {
