--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -1601,6 +1601,8 @@
 }
 
 .subscribers-filters {
+  border-top: 1px solid rgba(124, 139, 150, 0.2);
+  padding-top: 24px;
 
   @include media-breakpoint-down($desktop-breakpoint-dcrs) {
     margin-left: -15px;
