--- a/src/styles/components/_table.scss
+++ b/src/styles/components/_table.scss
@@ -100,6 +100,10 @@
       justify-content: space-between;
     }
 
+    &.m-reset-tgap {
+      padding-top: 0;
+    }
+
     .SubscribersBlockCollectionView & {
 
       @include media-breakpoint-down($desktop-breakpoint-dcrs) {
@@ -355,8 +359,8 @@
         }
 
         @include media-breakpoint-up($desktop-breakpoint) {
-          flex: 0 1 10%;
-          max-width: 10%;
+          flex: 0 1 14%;
+          max-width: 14%;
         }
       }
 
