--- a/src/styles/components/_table.scss
+++ b/src/styles/components/_table.scss
@@ -140,11 +140,10 @@
           background-color: $white;
         }
 
-        .EarningsBlockCollectionView &,
-        .SubscribersBlockCollectionView & {
+        .EarningsBlockCollectionView & {
 
           @include media-breakpoint-up($desktop-breakpoint) {
-            background-color: transparent;
+            top: 30px;
           }
         }
       }
@@ -324,8 +323,8 @@
         max-width: 57%;
 
         @include media-breakpoint-up($desktop-breakpoint) {
-          flex: 0 1 30%;
-          max-width: 30%;
+          flex: 0 1 44%;
+          max-width: 44%;
         }
       }
 
@@ -437,8 +436,8 @@
         max-width: 50%;
 
         @include media-breakpoint-up($desktop-breakpoint) {
-          flex: 0 1 40%;
-          max-width: 68%;
+          flex: 0 1 26%;
+          max-width: 26%;
         }
       }
 
@@ -705,6 +704,7 @@
   .userview-block {
     margin-left: 0;
     margin-top: auto;
+    min-height: 30px;
   }
 
   .PayoutsRequestsCollectionView &,
