--- a/src/styles/_stream.scss
+++ b/src/styles/_stream.scss
@@ -387,23 +387,24 @@
     position: relative;
     display: flex;
     flex-flow: row nowrap;
+    align-items: center;
 
     @include media-breakpoint-up($desktop-breakpoint) {
       margin-bottom: 17px;
     }
-  }
+  
 
-  &__input {
-    background: rgba(#000, 0.2);
-    color: #fff;
-    padding: 10px 45px 9px 17px;
-    border: 1px solid rgba(255, 255, 255, .2);
-    height: 40px;
-    &-ammount {
-
+    .form-tipsGoal__input {
+      background: rgba(#000, 0.2);
+      color: #fff;
+      padding: 10px 45px 9px 17px;
+      border: 1px solid rgba(255, 255, 255, .2);
+      height: 40px;
     }
-    &-description {
-
+    .form-tipsGoal__title {
+      color: #7e7e7e;
+      padding: 0;
+      padding-right: 10px;
     }
   }
 }
