--- a/src/styles/_stream.scss
+++ b/src/styles/_stream.scss
@@ -354,6 +354,9 @@
   &__wrapper {
     margin-bottom: 14px;
     position: relative;
+    &-moveUp {
+      margin-bottom: 70px;
+    }
 
     @include media-breakpoint-up($desktop-breakpoint) {
       margin-bottom: 17px;
@@ -375,6 +378,10 @@
   z-index: 2;
   right: 15px;
 
+  &.mobileView {
+    left: 17px;
+  }
+
   @include media-breakpoint-up($desktop-breakpoint) {
     left: 415px;
     bottom: 50px;
@@ -388,6 +395,8 @@
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
+
+   
 
     @include media-breakpoint-up($desktop-breakpoint) {
       margin-bottom: 17px;
