FIX: styles for tips form in stream guest changed

--- a/src/styles/_stream.scss
+++ b/src/styles/_stream.scss
@@ -444,6 +444,10 @@
       margin-bottom: 17px;
     }
 
+    .stream-viewer & {
+      margin-bottom: 0;
+    }
+
     .bottom-btns & {
       flex: 0 0 100%;
       margin-bottom: 5px;
