--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1238,4 +1238,11 @@ button {
     margin-top: -6px;
     margin-right: 6px;
   }
+
+  .btn {
+
+    + .btn {
+      margin-top: 14px;
+    }
+  }
 }
