FIX: background color in button section in mobile

--- a/src/styles/_explore.scss
+++ b/src/styles/_explore.scss
@@ -246,6 +246,8 @@
       position: relative;
     }
 
+
+    &.row-btn,
     &.userCollectionView {
 
       @include media-breakpoint-down($desktop-breakpoint-dcrs) {
