FIX: size of parent with buttonsAwards Voting fixed in explore page in mobile

--- a/src/styles/_explore.scss
+++ b/src/styles/_explore.scss
@@ -247,6 +247,13 @@
     }
 
 
+    &.row-btn {
+      
+      @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+        flex: 0 0 auto;
+      }
+    }
+
     &.row-btn,
     &.userCollectionView {
 
