--- a/src/styles/components/_loader.scss
+++ b/src/styles/components/_loader.scss
@@ -4,6 +4,12 @@
   text-align: center;
   padding-top: 20px;
   padding-bottom: 20px;
+
+  &_collapsed {
+    height: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 }
 
 .lds-dual-ring {
