FIX: title Stories from new line in feed page in mobile

--- a/src/styles/_stories.scss
+++ b/src/styles/_stories.scss
@@ -176,6 +176,19 @@
   &__header {
     display: flex;
     justify-content: space-between;
+
+    @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+      flex-wrap: wrap;
+    }
+
+    h4 {
+
+      @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+        order: 3;
+        flex: 0 0 100%;
+        margin-top: 10px;
+      }
+    }
   }
 
   .stories {
