FIX: reset top gap for genders switcher in mobile

--- a/src/styles/_genders.scss
+++ b/src/styles/_genders.scss
@@ -151,6 +151,10 @@
         padding-top: 0;
       }
 
+      .not-authorized & {
+        padding-top: 0;
+      }
+
       &:before {
         display: none;
       }
