--- a/src/styles/_explore.scss
+++ b/src/styles/_explore.scss
@@ -279,6 +279,14 @@
       padding: 3px 0;
     }
 
+    .profile-page & {
+
+      @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+        padding-top: 0;
+        padding-bottom: 0;
+      }
+    }
+
     &:not(.photos) {
 
       .searchView & {
