FIX: height for loader in search page

--- a/src/styles/_search.scss
+++ b/src/styles/_search.scss
@@ -176,6 +176,13 @@
       }
     }
   }
+
+  .loader-container {
+
+    @include media-breakpoint-up($desktop-breakpoint) {
+      min-height: calc(100vh - 210px);
+    }
+  }
 }
 
 .label-counter {
