Add unread button for all contacts list

--- a/src/styles/_chat.scss
+++ b/src/styles/_chat.scss
@@ -1624,3 +1624,12 @@
     }
   }
 }
+
+.unread-box {
+  .chatCollectionContentWrapper & {
+    top: auto;
+    position: absolute;
+    bottom: 0;
+    z-index: 10000;
+  }
+}
