--- a/src/styles/components/_editMedia.scss
+++ b/src/styles/components/_editMedia.scss
@@ -13,7 +13,8 @@
 
 .textarea__title {
   flex: 0 0 calc(100% - 45px);
-  border-radius: 6px 6px 0 0;
+  margin-bottom: 10px;
+  border-radius: 6px;
   box-shadow: 0 0 0 2px $secondary-color-20;
   background-color: $white;
   position: relative;
@@ -21,8 +22,8 @@
   padding: 13px 12px 0;
 
   + .text-media-container {
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
+    // border-top-left-radius: 0;
+    // border-top-right-radius: 0;
 
     .textarea {
       border-top-left-radius: 0;
