Disable follow/unfollow button while in progress. Refactor profile/home follow API to storeRequest

--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -589,6 +589,11 @@
       opacity: 1;
     }
   }
+
+  .btn-subscribe[disabled] {
+    opacity: 0.2;
+    color: $main-color;
+  }
 }
 
 .post-types-tabs {
