FIX: changes in payouts settings

--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -903,6 +903,11 @@ select {
   padding: 1px 0 0;
   cursor: pointer;
 
+  &.m-inline {
+    display: inline-flex;
+    margin-right: 25px;
+  }
+
   input {
     display: none;
 
