FIX: place for unread message counter in desktop and fixed styles

--- a/src/styles/_notifications.scss
+++ b/src/styles/_notifications.scss
@@ -194,6 +194,21 @@
     bottom: 0;
     width: 100%;
 
+    @include media-breakpoint-up($desktop-breakpoint) {
+      position: absolute;
+    }
+
+    + .contactsListContent.ps {
+
+      .popup .chatCollectionContentWrapper & {
+        
+        @include media-breakpoint-up($desktop-breakpoint) {
+          bottom: 30px;
+          height: auto;
+        }
+      }
+    }
+
     span, a {
       display: inline-block;
     }
