--- a/src/styles/_chat.scss
+++ b/src/styles/_chat.scss
@@ -142,6 +142,13 @@
     right: 0;
     top: 3px;
     bottom: 0;
+    
+    &.m-with-unread {
+
+      @include media-breakpoint-up($desktop-breakpoint) {
+        bottom: 30px;
+      }
+    }
   }
 
   &:not(.ps) {
