Show video duration and quality for all clips

--- a/src/styles/components/_icons.scss
+++ b/src/styles/components/_icons.scss
@@ -100,6 +100,18 @@
       content: "\E622";
     }
   }
+  
+  &-settings {
+    &:after {
+      content: "\E62F";
+    }
+  }
+
+  &-clock {
+    &:after {
+      content: "\E620";
+    }
+  }
 
   &-camera {
 
