--- a/src/styles/_notifications.scss
+++ b/src/styles/_notifications.scss
@@ -175,16 +175,21 @@
   left: 0;
   right: 0;
 
-  .notifications-container & {
-    position: fixed;
-    top: auto;
-    bottom: -1px;
 
-    @include media-breakpoint-up($desktop-breakpoint) {
-      position: absolute;
-      left: 30px;
-      right: 30px;
-      bottom: 0;
+  &.new-post-toast {
+
+    .notifications-container & {
+      position: fixed;
+      top: auto;
+      bottom: -1px;
+
+      @include media-breakpoint-up($desktop-breakpoint) {
+        position: absolute;
+        left: 30px;
+        right: 30px;
+        bottom: 0;
+        width: auto;
+      }
     }
   }
 
