FIX: reset border around message unread label in main nav

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1175,6 +1175,7 @@
 
       &:after {
         background: $secondary-color;
+        border: none;
         width: 6px;
         height: 6px;
         content: "";
