--- a/src/styles/components/settings/_payouts.scss
+++ b/src/styles/components/settings/_payouts.scss
@@ -440,6 +440,13 @@
   .set-price {
     text-align: center;
   }
+
+  .downloadFormContainer {
+    padding: 10px 0;
+    display: flex;
+    align-items: center;;
+    justify-content: center;
+  }
 }
 
 .PayoutsBankDoneView {
