--- a/src/styles/_chatCreateNew.scss
+++ b/src/styles/_chatCreateNew.scss
@@ -106,15 +106,11 @@
 }
 
 .btn-selected-all {
-  position: absolute;
-  height: 30px;
-  width: 30px;
-  right: 14px;
-  top: 15px;
   visibility: hidden;
   opacity: 0;
   transition: color .3s ease, opacity .3s ease;
   cursor: pointer;
+  user-select: none;
 
   @include media-breakpoint-up($desktop-breakpoint) {
     top: 14px;
@@ -138,11 +134,47 @@
     opacity: 1;
   }
 
+  span {
+    white-space: nowrap;
+    margin-right: 10px;
+  }
+
   @include media-breakpoint-up($desktop-breakpoint) {
 
     &:hover {
       color: $secondary-color;
       opacity: 1;
+    }
+  }
+}
+
+.select-all-block {
+  position: absolute;
+  right: 14px;
+  top: 12px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+
+  .toggle-element {
+    margin-top: 5px;
+  }
+
+  .checkbox-block {
+    display: flex;
+    align-items: center;
+
+    .caption {
+      margin-right: 10px;
+      margin-top: 5px;
+      opacity: 0.4;
+    }
+
+    &.enabled {
+      .caption {
+        opacity: 1;
+      }
     }
   }
 }
