--- a/src/styles/_searchChat.scss
+++ b/src/styles/_searchChat.scss
@@ -170,6 +170,15 @@
   position: relative;
   min-height: 61px;
 
+  &.select-all {
+    min-height: 90px;
+    align-content: start;
+
+    .sendTo {
+      margin-top: 6px;
+    }
+  }
+
   @include media-breakpoint-up($desktop-breakpoint) {
     padding-left: 20px;
     padding-right: 20px;
