Hide loader for reposted posts

--- a/src/styles/_posts.scss
+++ b/src/styles/_posts.scss
@@ -59,6 +59,14 @@
 
   &_preparation.post {
 
+
+    .innerPost_wrapper {
+      .media {
+        .loader-container {
+          display: none;
+        }
+      }
+    }
     .media {
 
       &:after {
