--- a/src/styles/_explore.scss
+++ b/src/styles/_explore.scss
@@ -376,6 +376,7 @@
 
       @include media-breakpoint-up($desktop-breakpoint) {
         grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-auto-rows: minmax(350px, auto);
       }
     }
 
