Swiper for video in chat

--- a/src/styles/components/_switcher.scss
+++ b/src/styles/components/_switcher.scss
@@ -7,6 +7,12 @@
   /* Fix of Webkit flickering */
   z-index: 1;
 
+  &.video-swiper {
+    .swiper-wrapper {
+      height: auto !important;
+    }
+  }
+
   &-no-flexbox {
 
     .swiper-slide {
