--- a/src/styles/components/_switcher.scss
+++ b/src/styles/components/_switcher.scss
@@ -8,6 +8,8 @@
   z-index: 1;
 
   &.video-swiper {
+    max-width: 100% ;
+    width: 100% ;
     .swiper-wrapper {
       height: auto !important;
     }
