Rename Store tab to Clips

--- a/src/styles/_explore.scss
+++ b/src/styles/_explore.scss
@@ -370,6 +370,17 @@
         }
       }
     }
+    &.clips {
+      @include media-breakpoint-up($desktop-breakpoint-dcrs) {
+        grid-template-columns: 1fr 1fr 1fr;
+      }
+      @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+        & > div {
+          padding-bottom: 15px;
+          border-bottom: 1px solid rgba(124, 139, 150, 0.2);
+        }
+      }
+    }
 
     &.lives {
       grid-template-columns: 1fr 1fr 1fr;
