--- a/src/styles/_login.scss
+++ b/src/styles/_login.scss
@@ -1,7 +1,6 @@
 @import "components/imports";
 
 .login-page {
-
   @include media-breakpoint-down($desktop-breakpoint-dcrs) {
     background: $white;
   }
@@ -11,15 +10,12 @@
   }
 
   &.static-page {
-
     .site-footer {
-
       @include media-breakpoint-down($desktop-breakpoint-dcrs) {
         border-top: none;
       }
 
       &:before {
-
         @include media-breakpoint-up($desktop-breakpoint) {
           display: none;
         }
@@ -27,15 +23,12 @@
     }
 
     .forgot {
-
       .site-footer {
-
         @include media-breakpoint-down($desktop-breakpoint-dcrs) {
           margin-top: auto;
         }
 
         .FooterNavCollectionView {
-
           @include media-breakpoint-down($desktop-breakpoint-dcrs) {
             padding-bottom: 22px;
           }
@@ -68,7 +61,6 @@
     }
 
     .container {
-
       @include media-breakpoint-up($desktop-breakpoint) {
         padding-left: 0;
         padding-right: 0;
@@ -76,7 +68,6 @@
     }
 
     .FooterNavCollectionView {
-
       @include media-breakpoint-down($desktop-breakpoint-dcrs) {
         padding-bottom: 0;
       }
@@ -84,7 +75,6 @@
   }
 
   #content {
-
     @include media-breakpoint-down($desktop-breakpoint-dcrs) {
       position: relative;
     }
@@ -93,7 +83,6 @@
 
 .login:not(.login_colored),
 .OtpView {
-
   @include media-breakpoint-up($desktop-breakpoint) {
     background-color: $white;
   }
@@ -101,7 +90,6 @@
 
 .login,
 .OtpView {
-
   @include media-breakpoint-up($desktop-breakpoint) {
     min-height: 100vh;
     display: flex;
@@ -110,7 +98,6 @@
   }
 
   &:not(.btn) {
-
     &:before {
       content: "";
       position: absolute;
@@ -118,7 +105,8 @@
       bottom: 0;
       width: 94%;
       left: 0;
-      background: url(#{$assetPath}/img/bg-login-page.png) no-repeat 100% 13% / 100% 100%;
+      background: url(#{$assetPath}/img/bg-login-page.png) no-repeat 100% 13% /
+        100% 100%;
       z-index: 0;
 
       @include media-breakpoint-up($desktop-breakpoint) {
@@ -131,11 +119,8 @@
 }
 
 .login {
-
   .login-wrapper {
-
     &.promotion-models {
-
       @include media-breakpoint-up($desktop-breakpoint) {
         width: 100%;
         max-width: 1100px;
@@ -143,9 +128,7 @@
       }
 
       .login-caption-col {
-
         .login-caption {
-
           @include media-breakpoint-up($desktop-breakpoint) {
             margin-bottom: 6.5em;
           }
@@ -155,17 +138,13 @@
   }
 
   &-wrapper {
-
     .footer-nav {
-
       .FooterNavView {
-
         @include media-breakpoint-up($desktop-breakpoint) {
           font-size: 15px;
         }
 
         &:last-child {
-
           @include media-breakpoint-down($desktop-breakpoint-dcrs) {
             margin-top: 21px;
             flex: 0 0 100%;
@@ -174,7 +153,7 @@
       }
 
       a {
-        opacity: .5;
+        opacity: 0.5;
 
         &:hover {
           opacity: 1;
@@ -187,7 +166,6 @@
 .forgot,
 .login,
 .OtpView {
-
   @include media-breakpoint-up($desktop-breakpoint) {
     position: relative;
   }
@@ -223,7 +201,6 @@
         top: 0;
 
         & > * {
-
           @include media-breakpoint-down($desktop-breakpoint-dcrs) {
             width: 100%;
           }
@@ -258,13 +235,11 @@
       margin-bottom: 15.3em;
     }
     .logo {
-
       @include media-breakpoint-down($desktop-breakpoint-dcrs) {
         margin-bottom: 7px;
       }
 
       .avn-style & {
-
         @include media-breakpoint-down($desktop-breakpoint-dcrs) {
           margin-bottom: 12px;
         }
@@ -340,11 +315,8 @@
               margin-bottom: 0;
             }
           }
-
         }
-
       }
-
     }
   }
 
@@ -355,26 +327,22 @@
 }
 
 .alt-font {
-
   @include media-breakpoint-up($desktop-breakpoint) {
     font-family: $add-font;
   }
 }
 
 .login-form {
-
   @include media-breakpoint-up($desktop-breakpoint) {
     margin-top: 60px;
   }
 
   .form-field {
-
     .login-page & {
       position: relative;
     }
 
     &:after {
-
       .login-page & {
         content: "";
         position: absolute;
@@ -383,7 +351,7 @@
         top: 0;
         bottom: 0;
         background-color: rgba(124, 139, 150, 1);
-        opacity: .08;
+        opacity: 0.08;
         border-radius: 20px;
         z-index: 0;
       }
@@ -392,7 +360,6 @@
 
   input,
   textarea {
-
     .login-page & {
       background: none;
       position: relative;
@@ -400,7 +367,6 @@
     }
 
     &:-webkit-autofill {
-
       .login-page & {
         -webkit-box-shadow: none;
       }
@@ -417,7 +383,7 @@
   top: 30px;
   right: 0;
   width: 352px;
-  transition: opacity .4s ease, transform .4s ease;
+  transition: opacity 0.4s ease, transform 0.4s ease;
   opacity: 0;
   pointer-events: none;
   transform: translateY(20px);
@@ -465,7 +431,6 @@
 }
 
 .auth-block {
-
   .auth-header-block & {
     background-color: $white;
     border-radius: 6px;
@@ -539,7 +504,6 @@
       color: $secondary-color;
 
       @include media-breakpoint-up($desktop-breakpoint) {
-
         &:hover {
           color: $secondary-color-darken;
         }
@@ -561,10 +525,14 @@
     p.forgot {
       padding: 41px 0 0;
     }
+    p.agree {
+      font-size: 10px;
+      padding: 10px 0 0;
+      font-weight: 300;
+    }
   }
 
   form {
-
     .error {
       text-align: center;
     }
@@ -595,7 +563,6 @@
   }
 
   &_sm-size {
-
     .signUp {
       margin-top: 22px;
 
@@ -648,9 +615,7 @@
 }
 
 .login-form-col {
-
   &.auth-block {
-
     @include media-breakpoint-down($desktop-breakpoint-dcrs) {
       flex: 1;
       display: flex;
@@ -658,7 +623,6 @@
     }
 
     > div:not(.site-footer) {
-
       @include media-breakpoint-down($desktop-breakpoint-dcrs) {
         flex: 1;
         display: flex;
@@ -672,14 +636,12 @@
     }
 
     .signUp {
-
       @include media-breakpoint-down($desktop-breakpoint-dcrs) {
         flex: 0 0 auto;
       }
     }
 
     .site-footer {
-
       @include media-breakpoint-down($desktop-breakpoint-dcrs) {
         margin-top: 70px;
         border-top: 1px solid rgba($gray, 0.2);
