Links preview clips at post content

--- a/src/styles/_posts.scss
+++ b/src/styles/_posts.scss
@@ -28,6 +28,10 @@
       padding-bottom: 12px;
       border-bottom: 1px solid rgba($gray, 0.2);
     }
+    .clipLinks {
+      // display: flex;
+  
+    }
   }
 
   .posts & {
