--- a/src/styles/team.scss
+++ b/src/styles/team.scss
@@ -143,3 +143,4 @@
 .icon-i72:before { content: '\e655'; } /* '' */
 .icon-i76:before { content: '\e656'; } /* '' */
 .icon-link:before { content: '\e800'; } /* '' */
+.icon-retweet:before { content: '\e801'; } /* '' */
