FIX: img instead pseudo element in Repost button

--- a/src/styles/_posts.scss
+++ b/src/styles/_posts.scss
@@ -359,6 +359,7 @@
         &:hover {
           color: $primary-color;
 
+          .likes__counter,
           .btn-icon {
             opacity: 1;
           }
@@ -367,6 +368,10 @@
 
       .btn-icon {
         transition: none;
+      }
+
+      .likes__counter,
+      .btn-icon {
         opacity: 0.3;
       }
 
@@ -374,6 +379,7 @@
       &.active {
         color: $primary-color;
 
+        .likes__counter,
         .btn-icon {
           opacity: 1;
         }
