Add approve/reject icons to notifications

--- a/src/styles/_notifications.scss
+++ b/src/styles/_notifications.scss
@@ -88,6 +88,20 @@
     }
   }
 
+  .approved {
+
+    &:after {
+      content: "\E603";
+    }
+  }
+
+  .rejected {
+
+    &:after {
+      content: "\E649";
+    }
+  }
+
   .mentioned {
 
     &:after {
