Add one-tips link creation flow at the Premium Links page

--- a/src/styles/components/settings/_payouts.scss
+++ b/src/styles/components/settings/_payouts.scss
@@ -137,6 +137,17 @@
       padding-left: 15px;
     }
   }
+  // .tipLinkExample {
+  //   text-align: center;
+  //   padding-bottom: 17px;
+  //   color: $secondary-color;
+  // }
+  .linkUrlContainer {
+    align-items: center;
+    .linkUrl {
+      color: $secondary-color;
+    }
+  }
 }
 
 .photo {
