--- a/src/styles/_magazine.scss
+++ b/src/styles/_magazine.scss
@@ -1,17 +1,13 @@
 .magazine {
-  @include media-breakpoint-down($desktop-breakpoint-dcrs) {
-    padding: 30px;
+  .subtitle {
+    margin-top: 20px;
   }
-
-  form {
-    margin-top: 30px;
-  }
-  .existing-subscription {
-    .subtitle {
-      margin-bottom: 20px;
+  .kinds {
+    margin-top: 20px;
+    .checkbox-wrapper {
+      margin-top: 5px;
+      margin-bottom: 10px;
+      margin-right: 15px;
     }
-  }
-  .payouts-personal-info {
-    margin-bottom: 20px;
   }
 }
