--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1570,6 +1570,11 @@
         }
       }
     }
+    &__magazine {
+      &:after {
+        content: "\E802";
+      }
+    }
     &__statistics {
       &:after {
         content: "\E639";
