--- a/src/styles/_stream.scss
+++ b/src/styles/_stream.scss
@@ -100,7 +100,7 @@
   video {
     width: 100%;
     height: 100%;
-    opacity: 0.6;
+    // opacity: 0.6;
 
     .stream_enabled & {
       opacity: 1;
@@ -326,6 +326,7 @@
   left: 0;
   right: 0;
   padding-right: 14px;
+  background-color: rgba(0,0,0,.2);
 }
 
 .stream-message {
