--- a/src/styles/_magazine.scss
+++ b/src/styles/_magazine.scss
@@ -1,13 +1,69 @@
 .magazine {
+  min-height: 200px;
+  .title {
+    font-size: 18px;
+    margin-bottom: 5px;
+  }
   .subtitle {
-    margin-top: 20px;
+    font-size: 16px;
+    margin-bottom: 5px;
+  }
+  .subtitle2 {
+    font-size: 13px;
   }
   .kinds {
-    margin-top: 20px;
     .checkbox-wrapper {
       margin-top: 5px;
-      margin-bottom: 10px;
+      margin-bottom: 0px;
       margin-right: 15px;
+    }
+  }
+  .shipping-form {
+    padding-top: 30px;
+    padding-bottom: 15px;
+    @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+  }
+  .shipping-info {
+    margin: 10px 0;
+    font-size: 14px;
+    .title {
+      font-size: 14px;
+    }
+    .item {
+      display: flex;
+      justify-content: space-between;
+      .value {
+        &__text {
+          opacity: 0.5;
+          @include media-breakpoint-up($desktop-breakpoint) {
+            line-height: 19px;
+          }
+        }
+      }
+      .btn {
+        border: none;
+        background: none;
+        color: var(--secondary-color);
+        padding: 0;
+        height: auto;
+        margin-left: 10px;
+      }
+    }
+  }
+  .red {
+    color: rgba(255, 0, 0, 1);
+  }
+  .toggle-wrapper {
+    @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+      padding-top: 0;
+    }
+    .inner {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
     }
   }
 }
