--- a/src/styles/_addPost.scss
+++ b/src/styles/_addPost.scss
@@ -209,7 +209,7 @@
 
       + .icn-item {
         color: $secondary-color;
-        opacity: 0.99;
+        opacity: 1;
       }
     }
   }
@@ -258,6 +258,7 @@
       opacity: 0.3;
       z-index: 0;
       border-radius: 5px;
+      pointer-events: none;
     }
 
     .popup &,
