Additional privacy settings

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -74,6 +74,7 @@
 @import "components/settings/referrals";
 @import "components/settings/security";
 @import "components/settings/story";
+@import "components/settings/privacy";
 @import "components/table";
 
 @import "components/addMenu";
