--- a/src/styles/_magazine.scss
+++ b/src/styles/_magazine.scss
@@ -75,4 +75,36 @@
       justify-content: space-between;
     }
   }
+
+  .previews {
+    padding: 0;
+    .items {
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      .item {
+        width: calc(25% - 5px);
+        @include media-breakpoint-down($mobile-breakpoint) {
+          width: calc(50% - 5px);
+        }
+        margin-bottom: 7px;
+        overflow: hidden;
+      }
+      img {
+        width: 100%;
+      }
+      .locked-picture {
+        cursor: pointer;
+        img {
+          opacity: 0.4;
+        }
+        &:hover {
+          img {
+            opacity: 0.6;
+          }
+        }
+      }
+    }
+  }
 }
