--- a/src/styles/_magazine.scss
+++ b/src/styles/_magazine.scss
@@ -25,6 +25,7 @@
       padding-left: 15px;
       padding-right: 15px;
     }
+    min-height: 140px;
   }
   .shipping-info {
     margin: 10px 0;
