--- a/src/styles/_stream.scss
+++ b/src/styles/_stream.scss
@@ -100,6 +100,11 @@
   video {
     width: 100%;
     height: 100%;
+    @include media-breakpoint-down($desktop-breakpoint) {
+      height: auto;
+      max-height: 100%;
+    }
+
     // opacity: 0.6;
 
     .stream_enabled & {
@@ -545,7 +550,11 @@
 
   video {
     width: 100%;
-    height: 100%;
+    height:100%;
+    @include media-breakpoint-down($desktop-breakpoint) {
+      height: auto;
+      max-height: 100%;
+    }
   }
 }
 
