--- a/src/styles/components/_table.scss
+++ b/src/styles/components/_table.scss
@@ -623,6 +623,83 @@
     }
   }
 
+  .DiscountUsersCollectionView & {
+    > * {
+      &:last-child {
+        border: none;
+
+        > *:not(.item),
+        > .item > * {
+          padding-top: 9px;
+          padding-bottom: 7px;
+        }
+      }
+
+      &:first-child {
+        > *:not(.item),
+        > .item > * {
+          padding-top: 14px;
+          padding-bottom: 8px;
+        }
+      }
+    }
+
+    &__cell {
+      flex: 0 0 58%;
+      max-width: 58%;
+
+      @include media-breakpoint-up($desktop-breakpoint) {
+        flex: 0 0 40%;
+        max-width: 40%;
+      }
+
+      &_selected {
+        flex: 0 1 24%;
+        max-width: 24%;
+
+        @include media-breakpoint-up($desktop-breakpoint) {
+          flex: 0 1 20%;
+          max-width: 15%;
+        }
+      }
+
+      &.user {
+        text-align: left;
+        padding-left: 5px;
+
+        @include media-breakpoint-up($desktop-breakpoint) {
+          padding-left: 22px;
+        }
+      }
+
+      &.actions {
+        flex: 0 1 13%;
+        margin-left: 5%;
+        max-width: 13%;
+      }
+    }
+
+    .item {
+      > *:not(.table__cell) {
+        padding: 0;
+      }
+
+      &:last-child {
+        @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+          padding-bottom: 7px;
+        }
+      }
+    }
+
+    time {
+      font-weight: 400;
+
+      @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+        font-size: 13px;
+      }
+    }
+  }
+
   .ReferralsBlockCollectionView & {
     > * {
       &:last-child {
