FIX: show dropdown with search results over another markup

--- a/src/styles/components/_table.scss
+++ b/src/styles/components/_table.scss
@@ -148,6 +148,10 @@
           }
         }
 
+        &.m-search-results {
+          z-index: 18;
+        }
+
         .bg-gradient__shadow {
 
           .semi-transparent {
