--- a/src/styles/_chat.scss
+++ b/src/styles/_chat.scss
@@ -40,7 +40,7 @@
     min-height: 100%;
     display: block;
   }
-  
+
   &:not(.chat) {
 
     .popup & {
@@ -143,7 +143,7 @@
     right: 0;
     top: 3px;
     bottom: 0;
-    
+
     &.m-with-unread {
 
       @include media-breakpoint-up($desktop-breakpoint) {
@@ -522,12 +522,12 @@
 .chat-message-viewer {
 
   .chatCollectionContentWrapper {
-    
+
     @include media-breakpoint-down($desktop-breakpoint-dcrs) {
       top: auto;
     }
   }
-  
+
   .chatViewContent {
 
     @include media-breakpoint-down($desktop-breakpoint-dcrs) {
@@ -788,7 +788,7 @@
     padding: 0;
 
     @include media-breakpoint-down($desktop-breakpoint-dcrs) {
-      min-height: 44px;
+      height: 40px;
       position: relative;
       z-index: 2;
     }
@@ -1095,7 +1095,7 @@
 
       @include media-breakpoint-down($desktop-breakpoint-dcrs) {
         position: absolute;
-        top: 44px;
+        top: 40px;
         bottom: 0;
         left: 0;
         right: 0;
@@ -1185,7 +1185,7 @@
         &.ps {
           .popup & {
             @include media-breakpoint-up($desktop-breakpoint) {
-              top: 40px;
+              top: 37px;
             }
           }
         }
