Fix mobile header text on subscribers page

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -589,6 +589,9 @@
   margin: 0 auto 0 0;
   @include ellipsis;
   font-size: 15px;
+  &.first-letter-uppercase {
+    text-transform: capitalize;
+  }
 
   &_reset-gl {
 
