Add avn API image as top background; set stars avatar to circle

--- a/src/styles/_contest.scss
+++ b/src/styles/_contest.scss
@@ -12,3 +12,13 @@
     margin-top: 15px;
   }
 }
+
+.contest {
+  .userView {
+    .bg {
+      background-size: cover;
+      background-position: center;
+      background-color: rgba($gray, 0.1);
+    }
+  }
+}
