Move vote btn to the bottom & center it

--- a/src/styles/_contest.scss
+++ b/src/styles/_contest.scss
@@ -20,6 +20,9 @@
       background-position: center;
       background-color: rgba($gray, 0.1);
     }
+    .profile-text {
+      margin-bottom: 15px;
+    }
   }
 }
 .contest-header {
