--- a/src/styles/_contest.scss
+++ b/src/styles/_contest.scss
@@ -15,6 +15,9 @@
 
 .contest {
   .userView {
+    &.active {
+      border: 2px solid rgba($default-secondary-color, 0.5);
+    }
     .bg {
       background-size: cover;
       background-position: center;
@@ -22,6 +25,12 @@
     }
     .profile-text {
       margin-bottom: 15px;
+    }
+    .more-functions {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
     }
   }
 }
