increase card height

--- a/src/styles/_contest.scss
+++ b/src/styles/_contest.scss
@@ -19,6 +19,7 @@
       border: 2px solid rgba($default-secondary-color, 0.5);
     }
     .bg {
+      height: 200px;
       background-size: cover;
       background-position: center;
       background-color: rgba($gray, 0.1);
