--- a/src/styles/_chatMessages.scss
+++ b/src/styles/_chatMessages.scss
@@ -373,6 +373,20 @@
 
   &.lockedMessage {
 
+    .media-chat {
+      position: relative;
+      &__price {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translateX(-50%) translateY(20px);
+        z-index: 10;
+        font-size: 1.2em;
+        color: #fff;
+        opacity: 0.7;
+      }
+    }
+
     .notAuthorMessage & {
 
       .media {
@@ -402,6 +416,11 @@
     color: transparent;
     pointer-events: none;
     user-select: none;
+  }
+
+  &__price {
+    margin-left: 33px;
+    color: $secondary-color;
   }
 }
 
