Group - owner card view settings

--- a/src/styles/components/_icons.scss
+++ b/src/styles/components/_icons.scss
@@ -258,6 +258,29 @@
     }
   }
 
+  &-unlocked {
+
+    &:after {
+      content: "\E61C";
+    }
+  }
+
+  &-radio {
+
+    &-checked {
+      &:after {
+        content: "\E60D";
+      }
+    }
+
+    &-unchecked {
+      &:after {
+        content: "\E60E";
+      }
+    }
+
+  }
+
   &-pos {
 
     &_center {
