--- a/src/styles/_usersGroups.scss
+++ b/src/styles/_usersGroups.scss
@@ -46,6 +46,14 @@
       display: flex;
       flex-flow: column nowrap;
       align-items: center;
+      &-settings {
+        margin-top: auto;
+        width: 100%;
+        // margin: auto -20px -20px -20px;
+        // padding: 20px;
+        // margin-bottom: -20px;
+        // background-color: $white;
+      }
       &-joinGroupContainer {
         margin-top: auto;
       }
