--- a/src/styles/_addPost.scss
+++ b/src/styles/_addPost.scss
@@ -512,6 +512,7 @@
 
     .submit {
       display: block;
+      margin-left: auto;
 
       @include media-breakpoint-down($desktop-breakpoint-dcrs) {
         margin: auto 0 auto auto;
@@ -583,6 +584,7 @@
 
 .actions-controls {
   display: flex;
+  flex-wrap: wrap;
   align-content: stretch;
   align-items: stretch;
 
@@ -601,6 +603,9 @@
   font-size: 15px;
   line-height: 30px;
   cursor: pointer;
+  &_post {
+    display: flex;
+  }
 
   &_full-width {
     flex: 0 0 100%;
